web: js: edit-dataset: Ensure status messages are always visible.
In addition to the sticky submenu, this commit implements sticky
status messages.

* src/djehuty/web/resources/static/css/main.css: Add CSS bits.
* src/djehuty/web/resources/static/js/edit-dataset.js: Assign the
  newly introduced CSS bits at the appropriate time.

--- a/src/djehuty/web/resources/static/css/main.css
+++ b/src/djehuty/web/resources/static/css/main.css
@@ -497,3 +497,5 @@ img { user-select: none; }
 #pre-header a:hover { color: #ccc; }
 #pre-header a:active { color: #999; }
 .sticky { position: fixed !important; top: 0px; width: 100% }
+.sticky-message { position: fixed !important; top: 70px; }
+.sticky-message p { margin: 0em; }
